添加一个布局文件

--- a/conf/application.ini
+++ b/conf/application.ini
@@ -51,7 +51,7 @@ routes.simple.module = m
 routes.simple.action = a
 
 routes.supervar.type = "supervar"
-routes.supervar.varname = cdoco
+routes.supervar.varname = sumibuy
 
 ;补充路由定义
 routes.rewrite.type = "rewrite"
