--- a/conf/application.ini
+++ b/conf/application.ini
@@ -1,5 +1,5 @@
 [common]
-application.modules= Index,Api
+application.modules= Index,Admin
 application.directory = APPLICATION_PATH  "/application"
 
 application.dispatcher.catchException = false
@@ -28,9 +28,9 @@ smarty.right_delimiter  = "}"
 smarty.index.template_dir     = APPLICATION_PATH "/application/views"
 smarty.index.compile_dir      = APPLICATION_PATH "/application/views/templates_c/"
 
-;Api Module
-smarty.api.template_dir     = APPLICATION_PATH "/application/modules/Api/views"
-smarty.api.compile_dir      = APPLICATION_PATH "/application/modules/Api/views/templates_c"
+;Admin Module
+smarty.admin.template_dir     = APPLICATION_PATH "/application/modules/Admin/views"
+smarty.admin.compile_dir      = APPLICATION_PATH "/application/modules/Admin/views/templates_c"
 
 [product : common]
 ;enable the error controller
@@ -38,8 +38,8 @@ application.dispatcher.catchException = 1
 
 ;路由配置
 routes.regex.type="regex"
-routes.regex.match="#^(/api)+(/)*$#"
-routes.regex.route.module=Api
+routes.regex.match="#^(/admin)+(/)*$#"
+routes.regex.route.module=Admin
 routes.regex.route.controller=Index
 routes.regex.route.action=Index
 routes.regex.map.1=name
