--- a/conf/application.ini
+++ b/conf/application.ini
@@ -20,7 +20,7 @@ application.ErrorUrl = "http://www.cdoco.com"
 
 application.library = APPLICATION_PATH "/application/library"
 
-;smarty 配置
+;Smarty 配置
 smarty.left_delimiter   = "{"
 smarty.right_delimiter  = "}"
 
